--- a/Jenkins.html
+++ b/Jenkins.html
@@ -99,7 +99,7 @@ Documentation
 <div class='dropdown-menu'>
 <a class='dropdown-item feature' href='/doc/book/'>
 <strong>
-User Guide
+Jenkin User Guide
 </strong>
 </a>
 <a class='dropdown-item' href='/doc/book/installing/'>
